# fireant

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  requirements-extras-ipython.txt  requirements-extras-mssql.txt  requirements-extras-snowflake.txt  requirements-extras-vertica.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: black.yml  ci.yml  pythonpackage.yml  release.yml
docs/: 1_setup.rst  2_database.rst  2_slicer.rst  3_dashboard.rst  3_dataset.rst  3_slicer.rst  4_queries.rst  5_extending.rst  Makefile  README  conf.py  index.rst
docs/api/: fireant.dashboards.managers.rst  fireant.dashboards.rst  fireant.dashboards.schemas.rst  fireant.database.database.rst  fireant.database.rst  fireant.database.vertica.rst  fireant.dataset.rst  fireant.middleware.rst  fireant.queries.rst  fireant.rst  fireant.settings.rst  fireant.slicer.filters.rst  fireant.slicer.managers.rst  fireant.slicer.operations.rst  fireant.slicer.queries.rst  fireant.slicer.references.rst  fireant.slicer.rst  fireant.slicer.schemas.rst  fireant.slicer.transformers.base.rst  fireant.slicer.transformers.datatables.rst  fireant.slicer.transformers.highcharts.rst  fireant.slicer.transformers.rst  fireant.slicer.widgets.rst  fireant.tests.dashboards.rst  fireant.tests.dashboards.test_dashboard_api.rst  fireant.tests.dashboards.test_widgets.rst  fireant.tests.database.mock_database.rst  fireant.tests.database.rst  fireant.tests.database.test_databases.rst  fireant.tests.dataset.operations.rst  fireant.tests.dataset.rst  fireant.tests.queries.rst  fireant.tests.rst  fireant.tests.slicer.queries.rst  fireant.tests.slicer.rst  fireant.tests.slicer.test_queries.rst  fireant.tests.slicer.test_slicer_api.rst  fireant.tests.slicer.transformers.base.rst  fireant.tests.slicer.transformers.rst  fireant.tests.slicer.transformers.test_csv.rst  (+39 more)
fireant/: __init__.py  exceptions.py  formats.py  reference_helpers.py  settings.py  utils.py
fireant/dashboards/: __init__.py  managers.py  schemas.py
fireant/database/: __init__.py  base.py  column.py  data_blending.py  database.py  mssql.py  mysql.py  postgresql.py  redshift.py  snowflake.py  sql_types.py  type_engine.py  vertica.py
fireant/dataset/: annotations.py  data_blending.py  fields.py  filters.py  intervals.py  joins.py  klass.py  modifiers.py  operations.py  references.py  totals.py
fireant/middleware/: __init__.py  concurrency.py  decorators.py
fireant/queries/: __init__.py  builder.py  execution.py  field_helper.py  finders.py  pagination.py  pandas_workaround.py  reference_helper.py  references.py  sets.py  sorting.py  special_cases.py  sql_transformer.py  totals_helper.py
fireant/queries/builder/: __init__.py  dataset_blender_query_builder.py  dataset_query_builder.py  dataset_sub_query_builder.py  dimension_choices_query_builder.py  dimension_latest_query_builder.py  query_builder.py
fireant/slicer/: __init__.py  base.py  dimensions.py  exceptions.py  filters.py  intervals.py  joins.py  managers.py  metrics.py  operations.py  pagination.py  postprocessors.py  queries.py  references.py  schemas.py  slicers.py  totals.py
fireant/slicer/queries/: __init__.py  builder.py  database.py  execution.py  finders.py  logger.py  makers.py  pagination.py  references.py  special_cases.py  sql_transformer.py
fireant/slicer/transformers/: __init__.py  base.py  bundles.py  datatables.py  highcharts.py  notebook.py  notebooks.py  utils.py
fireant/slicer/widgets/: __init__.py  base.py  chart_base.py  csv.py  datatables.py  formats.py  helpers.py  highcharts.py  matplotlib.py  pandas.py  reacttable.py
fireant/tests/: mock_dataframes.py  test_data_blending.py  test_fireant.py  test_formats.py  test_middleware.py  test_reference_helpers.py  test_utils.py  utils.py
fireant/tests/dashboards/: test_dashboard_api.py  test_widgets.py
fireant/tests/database/: __init__.py  mock_database.py  test_base_database.py  test_columns.py  test_databases.py  test_fetch.py  test_mssql.py  test_mysql.py  test_pickle.py  test_postgresql.py  test_redshift.py  test_snowflake.py  test_sql_types.py  test_type_engine.py  test_vertica.py
fireant/tests/dataset/: matchers.py  mocks.py  test_container.py  test_dataset.py  test_dataset_blender.py  test_execution.py  test_fields.py  test_filter_totals_from_share_results.py  test_operations.py  test_pandas_workaround.py  test_references.py
fireant/tests/queries/: test_build_data_blending.py  test_build_joins.py  (+21 more)
fireant/widgets/: __init__.py  base.py  chart_base.py  csv.py  highcharts.py  matplotlib.py  pandas.py  reacttable.py
scripts/: mysql_functions.sql
(+82 files in other folders)
