[tool.poetry]
name = "fireant"
version = "8.0.1"
description = ""
authors = ["Ąžuolas Krušna <akrusna@kayak.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8.0"
pandas = "^2.0.0"
pypika = "0.48.2"
toposort = "1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "7.3.0"
watchdog = "3.0.0"
tox = "==3.23.1"
tox-venv = "0.4.0"
tox-gh-actions = "2.5.0"
bumpversion = "0.5.3"
sphinx = "2.2.0"
sphinx-rtd-theme = "0.4.3"
black = "^23.9.1"

[tool.poetry.group.postgresql.dependencies]
psycopg2-binary = "2.9.6"

[tool.poetry.group.mysql.dependencies]
pymysql = "1.0.2"

[tool.poetry.group.mssql.dependencies]
cython = "3.0.0"
pymssql = "2.2.8"

[tool.poetry.group.redshift.dependencies]
psycopg2-binary = "2.9.6"

[tool.poetry.group.snowflake.dependencies]
snowflake-connector-python = "^3.0.0"

[tool.poetry.group.vertica.dependencies]
vertica-python = "^1.0.0"

[tool.poetry.group.ipython.dependencies]
matplotlib = ">=3.1.0"
ipython = ">=7.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
  | setup.py
)
'''
