[project]
name = "fireant"
version = "8.1.0"
description = "Data analysis tool for quickly building charts, tables, reports, and dashboards"
readme = "README.rst"
license = "Apache-2.0"
authors = [
    {name = "KAYAK, GmbH", email = "bandit@kayak.com"}
]
maintainers = [
    {name = "Ąžuolas Krušna", email = "akrusna@kayak.com"}
]
requires-python = ">=3.9"
keywords = [
    "fireant",
    "python",
    "query",
    "builder",
    "querybuilder",
    "sql",
    "mysql",
    "postgres",
    "mssql",
    "vertica",
    "analytics",
    "bi",
    "data",
    "science",
    "pandas",
]
dependencies = [
    "pandas>=2.0.0",
    "pypika>=0.50.0,<1.0.0",
    "toposort>=1.6,<2",
]

[project.urls]
Homepage = "https://github.com/kayak/fireant"
Documentation = "https://fireant.readthedocs.io"
Repository = "https://github.com/kayak/fireant"

[project.optional-dependencies]
mysql = ["pymysql>=1.0.0,<2"]
postgresql = ["psycopg2-binary>=2.9.11,<3"]
redshift = ["psycopg2-binary>=2.9.11,<3"]
mssql = ["cython>=3.0.0,<4", "pymssql>=2.2.0,<3"]
snowflake = ["snowflake-connector-python>=3.0.0,<4"]
vertica = ["vertica-python>=1.0.0,<2"]
ipython = ["matplotlib>=3.1.0,<4", "ipython>=7.11,<9"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "coverage==7.3.0",
    "watchdog==3.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fireant"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E731", "F821", "E741"]

[tool.ruff.lint.per-file-ignores]
# F401/F403: __init__.py files use imports to expose public API
"__init__.py" = ["F401", "F403"]
# F401/F403/F405: tests use star imports to verify public API; E712: boolean comparisons test filter behavior
"fireant/tests/*" = ["F401", "F403", "F405", "E712"]

[tool.pytest.ini_options]
testpaths = ["fireant/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["fireant"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
